Feature: complete list type api document
