# docs/swagger.yaml
@@ -1,5 +1,58 @@
 basePath: /name-list
 definitions:
+  httpx.JSONResult:
+    properties:
+      code:
+        description: 回包code，表明是否正确，在code == 0时，表明服务正常
+        type: integer
+      data:
+        description: 数据
+        type: object
+      message:
+        description: 回报message，在code != 0时，展示给前端
+        type: string
+    type: object
+  httpx.JSONResultPaged:
+    properties:
+      code:
+        description: 回包code，表明是否正确，在code == 0时，表明服务正常
+        type: integer
+      data:
+        description: 数据
+        type: object
+      message:
+        description: 回报message，在code != 0时，展示给前端
+        type: string
+      total:
+        description: 总数量
+        type: integer
+    type: object
+  list_type.CreateListTypeReq:
+    properties:
+      code:
+        description: 名单类型编码
+        type: string
+      description:
+        description: 描述
+        type: string
+      fields:
+        description: 这类名单的值被构建的字段
+        items:
+          type: string
+        type: array
+      is_valid:
+        description: 是否生效
+        type: boolean
+    type: object
+  list_type.UpdateListTypeReq:
+    properties:
+      description:
+        description: 描述
+        type: string
+      is_valid:
+        description: 是否生效
+        type: boolean
+    type: object
   models.ListType:
     properties:
       code:
@@ -64,10 +117,100 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: 正常回包, 回复查询成功的名单类型数据
           schema:
-            $ref: '#/definitions/models.ListType'
+            allOf:
+            - $ref: '#/definitions/httpx.JSONResultPaged'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.ListType'
+                  type: array
+              type: object
       summary: 名单类型查找功能
+      tags:
+      - 名单类型
+    post:
+      consumes:
+      - application/json
+      description: 名单类型查找功能, 通过code, is_valid, 分页
+      parameters:
+      - description: 名单属性
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/list_type.CreateListTypeReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 正常回包, 回复创建成功的名单类型数据
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpx.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.ListType'
+              type: object
+      summary: 名单类型创建功能
+      tags:
+      - 名单类型
+  /type/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: 名单类型删除功能, 通过list_type_id删除
+      parameters:
+      - description: 名单类型id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 正常回包, 回复删除成功的名单类型数据
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpx.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.ListType'
+              type: object
+      summary: 名单类型删除功能
+      tags:
+      - 名单类型
+    patch:
+      consumes:
+      - application/json
+      description: 名单类型查找功能, 通过code, is_valid, 分页
+      parameters:
+      - description: 名单类型id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 名单属性
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/list_type.UpdateListTypeReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 正常回包, 回复更新成功的名单类型数据
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpx.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.ListType'
+              type: object
+      summary: 名单类型创建功能
       tags:
       - 名单类型
 swagger: "2.0"
